Feat: add jenkins plugin folder, update root pom
Signed-off-by: tailp <tailp@kth.se>

--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -61,6 +61,7 @@
         <module>repairnator-pipeline</module>
         <module>repairnator-core</module>
         <module>repairnator-realtime</module>
+        <module>repairnator-jenkins-plugin</module>
     </modules>
 
     <repositories>
