--- a/repairnator/repairnator-jenkins-plugin/pom.xml
+++ b/repairnator/repairnator-jenkins-plugin/pom.xml
@@ -8,7 +8,7 @@
         <relativePath />
     </parent>
     <groupId>io.jenkins.plugins</groupId>
-    <artifactId>repairnator</artifactId>
+    <artifactId>repairnator-jenkins-plugin</artifactId>
     <version>1.0</version>
     <packaging>hpi</packaging>
     <properties>
@@ -21,7 +21,7 @@
           ~ stapler-plugin.version: The Stapler Maven plugin version required by the plugin.
      -->
     </properties>
-    <name>Repairnator Plugin</name>
+    <name>repairnator-jenkins-plugin</name>
     <!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for the applicable one if needed. -->
     <licenses>
         <license>
