--- a/repairnator/repairnator-jenkins-plugin/pom.xml
+++ b/repairnator/repairnator-jenkins-plugin/pom.xml
@@ -7,9 +7,9 @@
         <version>3.50</version>
         <relativePath />
     </parent>
-    <groupId>io.jenkins.plugins</groupId>
-    <artifactId>repairnator-jenkins-plugin</artifactId>
-    <version>1.0</version>
+    <groupId>fr.inria.repairnator</groupId>
+    <artifactId>repairnator-plugins</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
@@ -29,7 +29,15 @@
             <url>https://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
-    
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>jenkinsci-snapshots</id>
+            <name>jenkinsci-snapshots</name>
+            <url>https://repo.jenkins-ci.org/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -236,6 +244,61 @@
         </dependency>
     </dependencies>
 
+    <build>
+      <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.8.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5</version>
+          <dependencies>
+              <dependency>
+                  <groupId>org.apache.maven.scm</groupId>
+                  <artifactId>maven-scm-provider-gitexe</artifactId>
+                  <version>1.9.1</version>
+              </dependency>
+          </dependencies>
+          <executions>
+              <execution>
+                  <id>default</id>
+                  <goals>
+                      <goal>perform</goal>
+                  </goals>
+                  <configuration>
+                      <pomFileName>pom.xml</pomFileName>
+                  </configuration>
+              </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5</version>
+          <dependencies>
+              <dependency>
+                  <groupId>org.apache.maven.scm</groupId>
+                  <artifactId>maven-scm-provider-gitexe</artifactId>
+                  <version>1.9.1</version>
+              </dependency>
+          </dependencies>
+          <executions>
+              <execution>
+                  <id>default</id>
+                  <goals>
+                      <goal>perform</goal>
+                  </goals>
+                  <configuration>
+                      <pomFileName>pom.xml</pomFileName>
+                  </configuration>
+              </execution>
+            </executions>
+          </plugin>
+      </plugins>
+    </build>
     
     <repositories>
         <repository>
