Fix: remove AsertFixer due to spoon bug
Signed-off-by: tailp <tailp@kth.se>

--- a/repairnator/repairnator-jenkins-plugin/pom.xml
+++ b/repairnator/repairnator-jenkins-plugin/pom.xml
@@ -8,7 +8,7 @@
         <relativePath />
     </parent>
     <groupId>fr.inria.repairnator</groupId>
-    <artifactId>repairnator-plugins</artifactId>
+    <artifactId>repairnator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
