--- a/repairnator/repairnator-github-app/package.json
+++ b/repairnator/repairnator-github-app/package.json
@@ -2,7 +2,7 @@
   "name": "repairnator-bot",
   "version": "1.0.0",
   "private": true,
-  "description": "Software development bot that automatically repairs programs and build failures on Travis Continuous Integration (https://github.com/eclipse/repairnator)",
+  "description": "Software development bot that automatically repairs programs and build failures on Travis Continuous Integration (https://github.com/jianguda/repairnator-bot)",
   "author": "Jian GU <jianguda@gmail.com>",
   "license": "ISC",
   "repository": "https://github.com/jianguda/repairnator-bot.git",
@@ -20,7 +20,7 @@
     "probot": "^9.9.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
-    "rhea": "^1.0.15",
+    "rhea": "^1.0.17",
     "smee-client": "^1.1.0",
     "strip-ansi": "^6.0.0"
   },
