--- a/repairnator/repairnator-jenkins-plugin/pom.xml
+++ b/repairnator/repairnator-jenkins-plugin/pom.xml
@@ -8,7 +8,7 @@
         <relativePath />
     </parent>
     <groupId>fr.inria.repairnator</groupId>
-    <artifactId>repairnator</artifactId>
+    <artifactId>repairnator-jenkins-plugin</artifactId>
     <version>2.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
@@ -79,6 +79,22 @@
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.main</groupId>
+            <artifactId>maven-plugin</artifactId>
+            <version>2.13</version>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+          <version>1.12.1</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+          <version>1.19</version>
         </dependency>
     </dependencies>
 
