--- a/repairnator/repairnator-jenkins-plugin/pom.xml
+++ b/repairnator/repairnator-jenkins-plugin/pom.xml
@@ -8,13 +8,14 @@
         <relativePath />
     </parent>
     <groupId>fr.inria.repairnator</groupId>
-    <artifactId>repairnator-plugins</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>repairnator-jenkins-plugin</artifactId>
+    <version>2.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
         <jenkins.version>2.164.3</jenkins.version>
         <java.level>8</java.level>
+        <enforcer.skip>true</enforcer.skip>
         <!-- Other properties you may want to use:
           ~ jenkins-test-harness.version: Jenkins Test Harness version you use to test the plugin. For Jenkins version >= 1.580.1 use JTH 2.0 or higher.
           ~ hpi-plugin.version: The HPI Maven Plugin version used by the plugin..
@@ -53,172 +54,9 @@
                 <version>1.62</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-              <groupId>fr.inria.gforge.spoon</groupId>
-              <artifactId>spoon-core</artifactId>
-              <version>7.5.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.maven</groupId>
-              <artifactId>maven-model</artifactId>
-              <version>3.5.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.commons</groupId>
-              <artifactId>commons-lang3</artifactId>
-              <version>3.8.1</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.maven.shared</groupId>
-              <artifactId>maven-invoker</artifactId>
-              <version>3.0.1</version>
-            </dependency>
-            <dependency>
-              <groupId>commons-codec</groupId>
-              <artifactId>commons-codec</artifactId>
-              <version>1.11</version>
-            </dependency>
-            <dependency>
-              <groupId>com.google.code.gson</groupId>
-              <artifactId>gson</artifactId>
-              <version>2.8.5</version>
-            </dependency>
-            <dependency>
-              <groupId>org.slf4j</groupId>
-              <artifactId>slf4j-api</artifactId>
-              <version>2.0.0-alpha0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.httpcomponents</groupId>
-              <artifactId>httpclient</artifactId>
-              <version>4.5.10</version>
-            </dependency>
-            <dependency>
-              <groupId>com.googlecode.json-simple</groupId>
-              <artifactId>json-simple</artifactId>
-              <version>1.1.1</version>
-            </dependency>
-            <dependency>
-              <groupId>org.javassist</groupId>
-              <artifactId>javassist</artifactId>
-              <version>3.24.1-GA</version>
-            </dependency>
-            <dependency>
-              <groupId>org.codehaus.plexus</groupId>
-              <artifactId>plexus-utils</artifactId>
-              <version>3.0.24</version>
-            </dependency>
-            <dependency>
-              <groupId>org.jacoco</groupId>
-              <artifactId>org.jacoco.core</artifactId>
-              <version>0.8.1</version>
-            </dependency>
-            <dependency>
-              <groupId>org.springframework</groupId>
-              <artifactId>spring-beans</artifactId>
-              <version>3.0.7.RELEASE</version>
-            </dependency>
-            <dependency>
-              <groupId>org.springframework</groupId>
-              <artifactId>spring-core</artifactId>
-              <version>4.3.19.RELEASE</version>
-            </dependency>
-            <dependency>
-              <groupId>commons-net</groupId>
-              <artifactId>commons-net</artifactId>
-              <version>3.6</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.httpcomponents</groupId>
-              <artifactId>httpcore</artifactId>
-              <version>4.4.12</version>
-            </dependency>
-            <dependency>
-              <groupId>org.checkerframework</groupId>
-                <artifactId>checker-qual</artifactId>
-                <version>2.6.0</version>
-            </dependency>
-            <dependency>
-              <groupId>com.google.errorprone</groupId>
-              <artifactId>error_prone_annotations</artifactId>
-              <version>2.3.3</version>
-            </dependency>
-            <dependency>
-              <groupId>org.apache.commons</groupId>
-              <artifactId>commons-compress</artifactId>
-              <version>1.19</version>
-            </dependency>
-            <dependency>
-              <groupId>antlr</groupId>
-              <artifactId>antlr</artifactId>
-              <version>2.7.7</version>
-            </dependency>
-            <dependency>
-              <groupId>com.infradna.tool</groupId>
-              <artifactId>bridge-method-annotation</artifactId>
-              <version>1.17</version>
-            </dependency>
-            <dependency>
-              <groupId>com.infradna.tool</groupId>
-              <artifactId>bridge-method-annotation</artifactId>
-              <version>1.17</version>
-            </dependency>
-            <dependency>
-              <groupId>fr.inria.gforge.spirals</groupId>
-              <artifactId>nopol</artifactId>
-              <version>0.2-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm</artifactId>
-              <version>6.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm-commons</artifactId>
-              <version>6.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm-tree</artifactId>
-              <version>6.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm-analysis</artifactId>
-              <version>6.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm-util</artifactId>
-              <version>6.0</version>
-            </dependency>
-            <dependency>
-              <groupId>org.springframework</groupId>
-              <artifactId>spring-aop</artifactId>
-              <version>3.0.7.RELEASE</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
-        <!-- for importing local repairnator-pipeline dependency -->
-       <!--  <dependency>
-          <groupId>fr.inria.repairnator</groupId>
-          <artifactId>repairnator-pipeline</artifactId>
-          <version>3.2</version>
-          <exclusions>
-            <exclusion>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-beans</artifactId>
-            </exclusion>
-           </exclusions>
-        </dependency>  -->
-         <dependency>
-          <groupId>fr.inria.repairnator</groupId>
-          <artifactId>repairnator-pipeline</artifactId>
-          <version>3.3-SNAPSHOT</version>
-        </dependency>
-        
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
@@ -241,6 +79,22 @@
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.main</groupId>
+            <artifactId>maven-plugin</artifactId>
+            <version>2.13</version>
+        </dependency>
+
+        <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+          <version>1.12.1</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+          <version>1.19</version>
         </dependency>
     </dependencies>
 
@@ -301,20 +155,6 @@
     </build>
     
     <repositories>
-        <repository>
-            <id>sonatype</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>tdurieux.github.io/maven-repository/snapshots</id>
-            <name>tdurieux.github.io maven-repository</name>
-            <url>https://tdurieux.github.io/maven-repository/snapshots/</url>
-        </repository>
-        <repository>
-            <id>tdurieux.github.io/maven-repository/releases</id>
-            <name>tdurieux.github.io maven-repository</name>
-            <url>https://tdurieux.github.io/maven-repository/releases/</url>
-        </repository>
         <repository>
             <id>repo.jenkins-ci.org</id>
             <url>https://repo.jenkins-ci.org/public/</url>
