fix: pipeline ActiveMQ's access control args
Previously the pipeline only supports to connect ActiveMQ without username and password. This commit fixes the issue.

The corresponding test case has been enhanced. The added arguments have been documented in `doc/repairnator-kubernetes.md` and `repairnator-pipeline.yaml`.

Signed-off-by: Long Zhang <zhanglong3030@qq.com>

--- a/src/docker-images/pipeline-dockerimage/Dockerfile
+++ b/src/docker-images/pipeline-dockerimage/Dockerfile
@@ -46,6 +46,8 @@ ENV CREATE_PR=0
 ENV LISTEN_MODE=NOOP
 ENV ACTIVEMQ_URL=
 ENV ACTIVEMQ_LISTEN_QUEUE=
+ENV ACTIVEMQ_USERNAME=
+ENV ACTIVEMQ_PASSWORD=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
