--- a/src/pom.xml
+++ b/src/pom.xml
@@ -61,7 +61,9 @@
         <module>repairnator-pipeline</module>
         <module>repairnator-core</module>
         <module>repairnator-realtime</module>
-    </modules>
+				<module>repairnator-jenkins-plugin</module>
+				<module>maven-repair</module>
+			</modules>
 
     <repositories>
         <repository>
