Refactor: refactor pipeline launcher

--- a/src/repairnator-pipeline/pom.xml
+++ b/src/repairnator-pipeline/pom.xml
@@ -146,7 +146,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fr.inria.spirals.repairnator.pipeline.Launcher</mainClass>
+                            <mainClass>fr.inria.spirals.repairnator.pipelineb.Launcher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
