--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ jobs:
     - stage: deploy
       name: "deploy to Sonatype and Dockerhub"
       script: ./.travis/travis-deploy.sh
-      if: repo = eclipse/repairnator AND branch = master
+      if: TRAVIS_PULL_REQUEST != false AND branch = master
 
