--- a/src/repairnator-pipeline/pom.xml
+++ b/src/repairnator-pipeline/pom.xml
@@ -21,7 +21,7 @@
             <url>https://tdurieux.github.io/maven-repository/releases/</url>
         </repository>
     </repositories>
-
+    
     <dependencies>
         <dependency>
             <groupId>com.github.spoonlabs</groupId>
@@ -114,7 +114,11 @@
             <artifactId>activemq-core</artifactId>
             <version>5.7.0</version>
         </dependency>
-
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+          <version>1.19</version>
+        </dependency>
     </dependencies>
 
     <properties>
