--- a/src/repairnator-pipeline/pom.xml
+++ b/src/repairnator-pipeline/pom.xml
@@ -29,7 +29,7 @@
     <dependencies>
         <dependency>
             <groupId>se.kth.castor</groupId>
-            <artifactId>sonarqube-repair</artifactId>
+            <artifactId>sorald</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
