--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -7,12 +7,12 @@
         <version>7</version>
     </parent>
 
-    <groupId>fr.inria.gforge.spirals</groupId>
+    <groupId>fr.inria.repairnator</groupId>
     <artifactId>repair-maven-plugin</artifactId>
     <version>1.6-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
-    <name>Plugin to Automatically Fix failing test with Nopol and NPEFix</name>
+    <name>repair-maven-plugin</name>
 
     <!-- FIXME change it to the project's website -->
     <url />
@@ -30,10 +30,10 @@
     </properties>
 
     <scm>
-        <connection>scm:git:ssh://github.com/Spirals-Team/maven-repair.git
+        <connection>scm:git:https://github.com/eclipse/repairnator.git
         </connection>
         <developerConnection>
-            scm:git:[fetch=]https://github.com/Spirals-Team/maven-repair.git[push=]ssh://git@github.com/Spirals-Team/maven-repair.git
+          scm:git:ssh://github.com/eclipse/repairnator.git
         </developerConnection>
     </scm>
 
@@ -173,20 +173,14 @@
     </repositories>
 
     <distributionManagement>
-        <!--repository>
-          <id>internal-repo</id>
-          <name>Temporary Staging Repository</name>
-          <url>file://${project.build.directory}/mvn-repo/releases</url>
-        </repository-->
         <repository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
             </url>
         </repository>
         <snapshotRepository>
-            <id>internal-snapshot-repo</id>
-            <name>Temporary Staging Snapshot Repository</name>
-            <url>file://${project.build.directory}/mvn-repo/snapshots</url>
+          <id>ossrh-repairnator-snapshot</id>
+          <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
