work on SequencerRepair: test for patch correctness
Signed-off-by: Javier Ron <javierron90@gmail.com>

--- a/src/docker-images/pipeline-dockerimage/Dockerfile
+++ b/src/docker-images/pipeline-dockerimage/Dockerfile
@@ -4,6 +4,9 @@ LABEL Description="Repairnator Pipeline docker image" Vendor="Spirals" Version="
 
 VOLUME ["/var/log/"]
 
+RUN mkdir /root/workspace
+VOLUME /root/workspace
+
 COPY z3_for_linux /root/
 COPY projects_to_ignore.txt /root/
 COPY logback.xml /root/
