Fix. revert pom.xml change

--- a/src/pom.xml
+++ b/src/pom.xml
@@ -56,6 +56,7 @@
         <module>repairnator-core</module>
         <module>repairnator-realtime</module>
         <module>maven-repair</module>
+        <module>repairnator-jenkins-plugin</module>
     </modules>
 
     <repositories>
