Change method of detecting tools.jar
Signed-off-by: André Silva <andre15andre@hotmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ jobs:
         - TEST_PATH="src/maven-repair/"
         - TEST_LIST="**"
       install: ./.travis/travis-before.sh
-      script: ./.travis/travis-maven.repair.sh
+      script: ./.travis/travis-maven-repair.sh
       if: branch = master
     - stage: deploy
       name: "deploy to Sonatype and Dockerhub"
