--- a/src/maven-repair/pom.xml
+++ b/src/maven-repair/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-report-parser</artifactId>
-            <version>2.20</version>
+            <version>2.21.0</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>org.inria.sacha.automaticRepair</groupId>
             <artifactId>astor</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>20190919</version>
         </dependency>
         <dependency>
             <groupId>fr.inria.gforge.spirals</groupId>
@@ -144,6 +144,12 @@
         <dependency>
             <groupId>fr.inria.repairnator</groupId>
             <artifactId>repairnator-core</artifactId>
+            <version>3.3-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.inria.repairnator</groupId>
+            <artifactId>repairnator-pipeline</artifactId>
             <version>3.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
@@ -273,7 +279,7 @@
                 <dependency>
                     <groupId>fr.inria.gforge.spirals</groupId>
                     <artifactId>nopol</artifactId>
-                    <version>666abb764bf1819f6c316faf4fe5b559ac583de1</version>
+                    <version>0f47cdb2556b8003d717c62325fef4dbf09a2bae</version>
                 </dependency>
             </dependencies>
         </profile>
@@ -286,7 +292,7 @@
                 <dependency>
                     <groupId>fr.inria.gforge.spirals</groupId>
                     <artifactId>nopol</artifactId>
-                    <version>666abb764bf1819f6c316faf4fe5b559ac583de1</version>
+                    <version>0f47cdb2556b8003d717c62325fef4dbf09a2bae</version>
                     <exclusions>
                         <exclusion>
                             <groupId>com.sun</groupId>
