--- a/src/repairnator-realtime/pom.xml
+++ b/src/repairnator-realtime/pom.xml
@@ -69,6 +69,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.kohsuke</groupId>
+            <artifactId>github-api</artifactId>
+            <version>1.116</version>
+        </dependency>
     </dependencies>
 
     <build>
