--- a/src/repairnator-jenkins-plugin/pom.xml
+++ b/src/repairnator-jenkins-plugin/pom.xml
@@ -96,7 +96,14 @@
 
     <build>
       <plugins>
-        <plugin>
+          <plugin>
+              <groupId>org.jenkins-ci.tools</groupId>
+              <artifactId>maven-hpi-plugin</artifactId>
+              <configuration>
+                  <disabledTestInjection>true</disabledTestInjection>
+              </configuration>
+          </plugin>
+          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-deploy-plugin</artifactId>
             <version>2.8.1</version>
